<resources>
    <string name="app_name">Chef App</string>
    <string name="logo_name">onxpos logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="try_demo">Try Demo</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="refresh">Refresh</string>
    <string name="no_order_yet">No order yet.</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous button</string>
    <string name="history">History</string>
    <string name="history_empty">Your history is empty</string>
    <string name="all">All</string>
    <string name="order_number">Order Number</string>
    <string name="status">Status</string>
    <string name="summary">Summary</string>
    <string name="order_status">Order status</string>
    <string name="canceled">Canceled</string>
    <string name="delayed">Delayed</string>
    <string name="order_type">Order type</string>
    <string name="take_away">Take-away</string>
    <string name="dine_in">Dine in</string>
    <string name="delivery">Delivery</string>
    <string name="items">Items</string>
    <string name="Item_name">Item name</string>
    <string name="count">Count</string>
    <string name="no_item_yet">No item yet</string>
    <string name="ready">Ready</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="notes">Notes</string>
    <string name="language_selection_title">Choose your preferred language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="save">Save</string>
    <string name="application_settings">Application settings</string>
    <string name="unit">Unit</string>
    <string name="branch">Branch</string>
    <string name="pin_error_message">wrong pin</string>
    <string name="pin">pin</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="chef_logo">chef logo</string>
    <string name="onxpos_logo">onxpos logo</string>
    <string name="total_orders_number">Orders ( %1$d )</string>
    <string name="order_number_placeholder">(%1$d)</string>
    <string name="page_count">%1$d/%2$d</string>
    <string name="time_taken">Time taken</string>
    <string name="order_no"># Order No %1$s</string>
    <string name="status_icon">status icon</string>
    <string name="item_detail">%1$s x %2$s</string>
    <string name="done_orders">Done (%1$d)</string>
    <string name="cancel_orders">Cancel (%1$d)</string>
    <string name="please_enter_pin">Please enter your PIN code to log in</string>
    <string name="url">URL</string>
    <string name="orders">Orders</string>
    <string name="new_state_name">New</string>
    <string name="changed">Changed</string>
</resources>