<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.chefapp.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edges"
        android:paddingHorizontal="50dp"
        android:paddingBottom="34dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logout" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/almarai"
            android:text="@string/logout_message"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_marginTop="34dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/almarai"
            android:text="@string/cancel"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:onClick="@{() -> viewModel.popOutLogout()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="150dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/almarai"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="@{() -> viewModel.logout()}"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>